[metadata]
name = TEoutput
version = attr: TEoutput._version.__version__
url = https://github.com/JianboHIT/TEoutput
author = Jianbo, ZHU
description = A python3 package for thermoelectric output performance calculations
long_description = file: README.md
long_description_content_type = text/markdown
keywords = thermoelectricity, simulation
license = Apache-2.0 license
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License


[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy
    scipy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    teop-interp = TEoutput.interface:do_interp
    teop-mixing = TEoutput.interface:do_mixing
    teop-ztdev  = TEoutput.interface:do_ztdev
    teop-format = TEoutput.interface:do_format
    teop-cutoff = TEoutput.interface:do_cutoff
    teop-refine = TEoutput.interface:do_refine
