[metadata]
name = TEflow
version = attr: teflow._version.__version__
url = https://github.com/JianboHIT/TEflow
author = Jianbo, ZHU
description = A python3 package for thermoelectric output performance calculations
long_description = file: README.md
long_description_content_type = text/markdown
keywords = thermoelectricity, simulation
license = Apache-2.0 license
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License


[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy
    scipy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    tef = teflow.interface:do_help
    tef-interp = teflow.interface:do_interp
    tef-mixing = teflow.interface:do_mixing
    tef-ztdev  = teflow.interface:do_ztdev
    tef-format = teflow.interface:do_format
    tef-cutoff = teflow.interface:do_cutoff
    tef-refine = teflow.interface:do_refine
